@@ -136,7 +136,6 @@ jstack PID
 jmap -heap PID
 ```
 
-
 （3）dump出堆内存相关信息
 
 ```
@@ -235,6 +234,9 @@ jmap -dump:format=b,file=heap.hprof 44808
 
 要想分析日志的信息，得先拿到GC日志文件才行，所以得先配置一下
 根据前面参数的学习，下面的配置很容易看懂
+-XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps
+-Xloggc:gc.log
+
 在线
 http://gceasy.io
 GCViewer
